# ai-wealth-dashboard

./: .gitignore  ADR.md  CLAUDE.md  docker-compose.yml  start.sh  sync-shared.sh
backend/: .env  .env.example  Dockerfile  bot.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  models.py  push.py
backend/app/db/: collections.py
backend/app/routers/: accounts.py  admin.py  analytics.py  auth.py  budget.py  categories.py  challenges.py  chat.py  debt.py  investments.py  mono.py  preferences.py  push.py  savings_insights.py  statements.py  transactions.py  truelayer.py  yapily.py
backend/app/services/: categorisation.py  memory.py  mono_sync.py  pay_period.py  pdf.py  region.py  truelayer_sync.py  yapily_sync.py
backend/app/workers/: ai_worker.py  arq_settings.py  sync_worker.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: AccountMiniCard.tsx  AuthProvider.tsx  BankPickerSheet.tsx  BottomNav.tsx  CategoriesContext.tsx  CategoryRow.tsx  ChallengesPanel.tsx  ColourProvider.tsx  HelpButton.tsx  InvestmentMiniCard.tsx  InvestmentUpload.tsx  LoginScreen.tsx  MonoConnect.tsx  MpesaUpload.tsx  NetWorthCard.tsx  PeriodNav.tsx  PreferencesContext.tsx  SegmentedControl.tsx  Sidebar.tsx  Spinner.tsx  StatementUpload.tsx  ThemeColor.tsx  TransactionRow.tsx  TransactionSheet.tsx  (+5 more)
mobile/: app.json  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
nginx/: nginx.conf
shared/: package.json
(+48 files in other folders)
