[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kevin <kevin.maingi12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.0"
httpx = "^0.28.1"
dotenv = "^0.9.9"
uvicorn = "^0.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
